[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
mshv-bindings =  {git = "https://github.com/rust-vmm/mshv.git", tag = "v0.2.0"}
mshv-ioctls = {git = "https://github.com/rust-vmm/mshv.git",  tag = "v0.2.0"}
libc = { version = "0.2.148" }
x86 = "0.52.0"
goblin = { version = "0.8" }

[features]
bug = [] # manifests bug